# sprite-generator

./: .gitignore  CMakeLists.txt  README.md
fluid_ui_designs/: MyCubeViewUI.cxx  MyCubeViewUI.h  SpriteGenerator.fl
fluid_ui_designs/generated_inc/: MyCubeViewUI.h
fluid_ui_designs/generated_src/: MyCubeViewUI.cxx
inc/: Mesh.h  Model.h  SimpleGL3Window.h
src/: Mesh.cpp  Model.cpp  OpenGL3test.cxx  Source.cpp  gouraud.frag  unlit.frag  vertex.vert
